# screen_capture

./: CMakeLists.txt  README.md  hwndToMat.cpp  hwndToMat.h  main.cpp  videoWriter.cpp  videoWriter.h
